--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MultiPosts</string>
+    <string name="app_name">MultiPosts2</string>
     <string name="action_settings">Settings</string>
     <string name="logo">logo</string>
     <string name="he">へ</string>
